
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
__attribute__((used)) static void Matrix34Multiply( float *a, float *b, float *out ) {
 out[ 0] = a[0] * b[0] + a[1] * b[4] + a[ 2] * b[ 8];
 out[ 1] = a[0] * b[1] + a[1] * b[5] + a[ 2] * b[ 9];
 out[ 2] = a[0] * b[2] + a[1] * b[6] + a[ 2] * b[10];
 out[ 3] = a[0] * b[3] + a[1] * b[7] + a[ 2] * b[11] + a[ 3];
 out[ 4] = a[4] * b[0] + a[5] * b[4] + a[ 6] * b[ 8];
 out[ 5] = a[4] * b[1] + a[5] * b[5] + a[ 6] * b[ 9];
 out[ 6] = a[4] * b[2] + a[5] * b[6] + a[ 6] * b[10];
 out[ 7] = a[4] * b[3] + a[5] * b[7] + a[ 6] * b[11] + a[ 7];
 out[ 8] = a[8] * b[0] + a[9] * b[4] + a[10] * b[ 8];
 out[ 9] = a[8] * b[1] + a[9] * b[5] + a[10] * b[ 9];
 out[10] = a[8] * b[2] + a[9] * b[6] + a[10] * b[10];
 out[11] = a[8] * b[3] + a[9] * b[7] + a[10] * b[11] + a[11];
}
