; ModuleID = '/home/carl/AnghaBench/lab/engine/code/renderergl2/extr_tr_model_iqm.c_Matrix34Multiply.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/renderergl2/extr_tr_model_iqm.c_Matrix34Multiply.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (float*, float*, float*)* @Matrix34Multiply to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @Matrix34Multiply(float* %0, float* %1, float* %2) #0 {
  %4 = alloca float*, align 8
  %5 = alloca float*, align 8
  %6 = alloca float*, align 8
  store float* %0, float** %4, align 8
  store float* %1, float** %5, align 8
  store float* %2, float** %6, align 8
  %7 = load float*, float** %4, align 8
  %8 = getelementptr inbounds float, float* %7, i64 0
  %9 = load float, float* %8, align 4
  %10 = load float*, float** %5, align 8
  %11 = getelementptr inbounds float, float* %10, i64 0
  %12 = load float, float* %11, align 4
  %13 = fmul float %9, %12
  %14 = load float*, float** %4, align 8
  %15 = getelementptr inbounds float, float* %14, i64 1
  %16 = load float, float* %15, align 4
  %17 = load float*, float** %5, align 8
  %18 = getelementptr inbounds float, float* %17, i64 4
  %19 = load float, float* %18, align 4
  %20 = fmul float %16, %19
  %21 = fadd float %13, %20
  %22 = load float*, float** %4, align 8
  %23 = getelementptr inbounds float, float* %22, i64 2
  %24 = load float, float* %23, align 4
  %25 = load float*, float** %5, align 8
  %26 = getelementptr inbounds float, float* %25, i64 8
  %27 = load float, float* %26, align 4
  %28 = fmul float %24, %27
  %29 = fadd float %21, %28
  %30 = load float*, float** %6, align 8
  %31 = getelementptr inbounds float, float* %30, i64 0
  store float %29, float* %31, align 4
  %32 = load float*, float** %4, align 8
  %33 = getelementptr inbounds float, float* %32, i64 0
  %34 = load float, float* %33, align 4
  %35 = load float*, float** %5, align 8
  %36 = getelementptr inbounds float, float* %35, i64 1
  %37 = load float, float* %36, align 4
  %38 = fmul float %34, %37
  %39 = load float*, float** %4, align 8
  %40 = getelementptr inbounds float, float* %39, i64 1
  %41 = load float, float* %40, align 4
  %42 = load float*, float** %5, align 8
  %43 = getelementptr inbounds float, float* %42, i64 5
  %44 = load float, float* %43, align 4
  %45 = fmul float %41, %44
  %46 = fadd float %38, %45
  %47 = load float*, float** %4, align 8
  %48 = getelementptr inbounds float, float* %47, i64 2
  %49 = load float, float* %48, align 4
  %50 = load float*, float** %5, align 8
  %51 = getelementptr inbounds float, float* %50, i64 9
  %52 = load float, float* %51, align 4
  %53 = fmul float %49, %52
  %54 = fadd float %46, %53
  %55 = load float*, float** %6, align 8
  %56 = getelementptr inbounds float, float* %55, i64 1
  store float %54, float* %56, align 4
  %57 = load float*, float** %4, align 8
  %58 = getelementptr inbounds float, float* %57, i64 0
  %59 = load float, float* %58, align 4
  %60 = load float*, float** %5, align 8
  %61 = getelementptr inbounds float, float* %60, i64 2
  %62 = load float, float* %61, align 4
  %63 = fmul float %59, %62
  %64 = load float*, float** %4, align 8
  %65 = getelementptr inbounds float, float* %64, i64 1
  %66 = load float, float* %65, align 4
  %67 = load float*, float** %5, align 8
  %68 = getelementptr inbounds float, float* %67, i64 6
  %69 = load float, float* %68, align 4
  %70 = fmul float %66, %69
  %71 = fadd float %63, %70
  %72 = load float*, float** %4, align 8
  %73 = getelementptr inbounds float, float* %72, i64 2
  %74 = load float, float* %73, align 4
  %75 = load float*, float** %5, align 8
  %76 = getelementptr inbounds float, float* %75, i64 10
  %77 = load float, float* %76, align 4
  %78 = fmul float %74, %77
  %79 = fadd float %71, %78
  %80 = load float*, float** %6, align 8
  %81 = getelementptr inbounds float, float* %80, i64 2
  store float %79, float* %81, align 4
  %82 = load float*, float** %4, align 8
  %83 = getelementptr inbounds float, float* %82, i64 0
  %84 = load float, float* %83, align 4
  %85 = load float*, float** %5, align 8
  %86 = getelementptr inbounds float, float* %85, i64 3
  %87 = load float, float* %86, align 4
  %88 = fmul float %84, %87
  %89 = load float*, float** %4, align 8
  %90 = getelementptr inbounds float, float* %89, i64 1
  %91 = load float, float* %90, align 4
  %92 = load float*, float** %5, align 8
  %93 = getelementptr inbounds float, float* %92, i64 7
  %94 = load float, float* %93, align 4
  %95 = fmul float %91, %94
  %96 = fadd float %88, %95
  %97 = load float*, float** %4, align 8
  %98 = getelementptr inbounds float, float* %97, i64 2
  %99 = load float, float* %98, align 4
  %100 = load float*, float** %5, align 8
  %101 = getelementptr inbounds float, float* %100, i64 11
  %102 = load float, float* %101, align 4
  %103 = fmul float %99, %102
  %104 = fadd float %96, %103
  %105 = load float*, float** %4, align 8
  %106 = getelementptr inbounds float, float* %105, i64 3
  %107 = load float, float* %106, align 4
  %108 = fadd float %104, %107
  %109 = load float*, float** %6, align 8
  %110 = getelementptr inbounds float, float* %109, i64 3
  store float %108, float* %110, align 4
  %111 = load float*, float** %4, align 8
  %112 = getelementptr inbounds float, float* %111, i64 4
  %113 = load float, float* %112, align 4
  %114 = load float*, float** %5, align 8
  %115 = getelementptr inbounds float, float* %114, i64 0
  %116 = load float, float* %115, align 4
  %117 = fmul float %113, %116
  %118 = load float*, float** %4, align 8
  %119 = getelementptr inbounds float, float* %118, i64 5
  %120 = load float, float* %119, align 4
  %121 = load float*, float** %5, align 8
  %122 = getelementptr inbounds float, float* %121, i64 4
  %123 = load float, float* %122, align 4
  %124 = fmul float %120, %123
  %125 = fadd float %117, %124
  %126 = load float*, float** %4, align 8
  %127 = getelementptr inbounds float, float* %126, i64 6
  %128 = load float, float* %127, align 4
  %129 = load float*, float** %5, align 8
  %130 = getelementptr inbounds float, float* %129, i64 8
  %131 = load float, float* %130, align 4
  %132 = fmul float %128, %131
  %133 = fadd float %125, %132
  %134 = load float*, float** %6, align 8
  %135 = getelementptr inbounds float, float* %134, i64 4
  store float %133, float* %135, align 4
  %136 = load float*, float** %4, align 8
  %137 = getelementptr inbounds float, float* %136, i64 4
  %138 = load float, float* %137, align 4
  %139 = load float*, float** %5, align 8
  %140 = getelementptr inbounds float, float* %139, i64 1
  %141 = load float, float* %140, align 4
  %142 = fmul float %138, %141
  %143 = load float*, float** %4, align 8
  %144 = getelementptr inbounds float, float* %143, i64 5
  %145 = load float, float* %144, align 4
  %146 = load float*, float** %5, align 8
  %147 = getelementptr inbounds float, float* %146, i64 5
  %148 = load float, float* %147, align 4
  %149 = fmul float %145, %148
  %150 = fadd float %142, %149
  %151 = load float*, float** %4, align 8
  %152 = getelementptr inbounds float, float* %151, i64 6
  %153 = load float, float* %152, align 4
  %154 = load float*, float** %5, align 8
  %155 = getelementptr inbounds float, float* %154, i64 9
  %156 = load float, float* %155, align 4
  %157 = fmul float %153, %156
  %158 = fadd float %150, %157
  %159 = load float*, float** %6, align 8
  %160 = getelementptr inbounds float, float* %159, i64 5
  store float %158, float* %160, align 4
  %161 = load float*, float** %4, align 8
  %162 = getelementptr inbounds float, float* %161, i64 4
  %163 = load float, float* %162, align 4
  %164 = load float*, float** %5, align 8
  %165 = getelementptr inbounds float, float* %164, i64 2
  %166 = load float, float* %165, align 4
  %167 = fmul float %163, %166
  %168 = load float*, float** %4, align 8
  %169 = getelementptr inbounds float, float* %168, i64 5
  %170 = load float, float* %169, align 4
  %171 = load float*, float** %5, align 8
  %172 = getelementptr inbounds float, float* %171, i64 6
  %173 = load float, float* %172, align 4
  %174 = fmul float %170, %173
  %175 = fadd float %167, %174
  %176 = load float*, float** %4, align 8
  %177 = getelementptr inbounds float, float* %176, i64 6
  %178 = load float, float* %177, align 4
  %179 = load float*, float** %5, align 8
  %180 = getelementptr inbounds float, float* %179, i64 10
  %181 = load float, float* %180, align 4
  %182 = fmul float %178, %181
  %183 = fadd float %175, %182
  %184 = load float*, float** %6, align 8
  %185 = getelementptr inbounds float, float* %184, i64 6
  store float %183, float* %185, align 4
  %186 = load float*, float** %4, align 8
  %187 = getelementptr inbounds float, float* %186, i64 4
  %188 = load float, float* %187, align 4
  %189 = load float*, float** %5, align 8
  %190 = getelementptr inbounds float, float* %189, i64 3
  %191 = load float, float* %190, align 4
  %192 = fmul float %188, %191
  %193 = load float*, float** %4, align 8
  %194 = getelementptr inbounds float, float* %193, i64 5
  %195 = load float, float* %194, align 4
  %196 = load float*, float** %5, align 8
  %197 = getelementptr inbounds float, float* %196, i64 7
  %198 = load float, float* %197, align 4
  %199 = fmul float %195, %198
  %200 = fadd float %192, %199
  %201 = load float*, float** %4, align 8
  %202 = getelementptr inbounds float, float* %201, i64 6
  %203 = load float, float* %202, align 4
  %204 = load float*, float** %5, align 8
  %205 = getelementptr inbounds float, float* %204, i64 11
  %206 = load float, float* %205, align 4
  %207 = fmul float %203, %206
  %208 = fadd float %200, %207
  %209 = load float*, float** %4, align 8
  %210 = getelementptr inbounds float, float* %209, i64 7
  %211 = load float, float* %210, align 4
  %212 = fadd float %208, %211
  %213 = load float*, float** %6, align 8
  %214 = getelementptr inbounds float, float* %213, i64 7
  store float %212, float* %214, align 4
  %215 = load float*, float** %4, align 8
  %216 = getelementptr inbounds float, float* %215, i64 8
  %217 = load float, float* %216, align 4
  %218 = load float*, float** %5, align 8
  %219 = getelementptr inbounds float, float* %218, i64 0
  %220 = load float, float* %219, align 4
  %221 = fmul float %217, %220
  %222 = load float*, float** %4, align 8
  %223 = getelementptr inbounds float, float* %222, i64 9
  %224 = load float, float* %223, align 4
  %225 = load float*, float** %5, align 8
  %226 = getelementptr inbounds float, float* %225, i64 4
  %227 = load float, float* %226, align 4
  %228 = fmul float %224, %227
  %229 = fadd float %221, %228
  %230 = load float*, float** %4, align 8
  %231 = getelementptr inbounds float, float* %230, i64 10
  %232 = load float, float* %231, align 4
  %233 = load float*, float** %5, align 8
  %234 = getelementptr inbounds float, float* %233, i64 8
  %235 = load float, float* %234, align 4
  %236 = fmul float %232, %235
  %237 = fadd float %229, %236
  %238 = load float*, float** %6, align 8
  %239 = getelementptr inbounds float, float* %238, i64 8
  store float %237, float* %239, align 4
  %240 = load float*, float** %4, align 8
  %241 = getelementptr inbounds float, float* %240, i64 8
  %242 = load float, float* %241, align 4
  %243 = load float*, float** %5, align 8
  %244 = getelementptr inbounds float, float* %243, i64 1
  %245 = load float, float* %244, align 4
  %246 = fmul float %242, %245
  %247 = load float*, float** %4, align 8
  %248 = getelementptr inbounds float, float* %247, i64 9
  %249 = load float, float* %248, align 4
  %250 = load float*, float** %5, align 8
  %251 = getelementptr inbounds float, float* %250, i64 5
  %252 = load float, float* %251, align 4
  %253 = fmul float %249, %252
  %254 = fadd float %246, %253
  %255 = load float*, float** %4, align 8
  %256 = getelementptr inbounds float, float* %255, i64 10
  %257 = load float, float* %256, align 4
  %258 = load float*, float** %5, align 8
  %259 = getelementptr inbounds float, float* %258, i64 9
  %260 = load float, float* %259, align 4
  %261 = fmul float %257, %260
  %262 = fadd float %254, %261
  %263 = load float*, float** %6, align 8
  %264 = getelementptr inbounds float, float* %263, i64 9
  store float %262, float* %264, align 4
  %265 = load float*, float** %4, align 8
  %266 = getelementptr inbounds float, float* %265, i64 8
  %267 = load float, float* %266, align 4
  %268 = load float*, float** %5, align 8
  %269 = getelementptr inbounds float, float* %268, i64 2
  %270 = load float, float* %269, align 4
  %271 = fmul float %267, %270
  %272 = load float*, float** %4, align 8
  %273 = getelementptr inbounds float, float* %272, i64 9
  %274 = load float, float* %273, align 4
  %275 = load float*, float** %5, align 8
  %276 = getelementptr inbounds float, float* %275, i64 6
  %277 = load float, float* %276, align 4
  %278 = fmul float %274, %277
  %279 = fadd float %271, %278
  %280 = load float*, float** %4, align 8
  %281 = getelementptr inbounds float, float* %280, i64 10
  %282 = load float, float* %281, align 4
  %283 = load float*, float** %5, align 8
  %284 = getelementptr inbounds float, float* %283, i64 10
  %285 = load float, float* %284, align 4
  %286 = fmul float %282, %285
  %287 = fadd float %279, %286
  %288 = load float*, float** %6, align 8
  %289 = getelementptr inbounds float, float* %288, i64 10
  store float %287, float* %289, align 4
  %290 = load float*, float** %4, align 8
  %291 = getelementptr inbounds float, float* %290, i64 8
  %292 = load float, float* %291, align 4
  %293 = load float*, float** %5, align 8
  %294 = getelementptr inbounds float, float* %293, i64 3
  %295 = load float, float* %294, align 4
  %296 = fmul float %292, %295
  %297 = load float*, float** %4, align 8
  %298 = getelementptr inbounds float, float* %297, i64 9
  %299 = load float, float* %298, align 4
  %300 = load float*, float** %5, align 8
  %301 = getelementptr inbounds float, float* %300, i64 7
  %302 = load float, float* %301, align 4
  %303 = fmul float %299, %302
  %304 = fadd float %296, %303
  %305 = load float*, float** %4, align 8
  %306 = getelementptr inbounds float, float* %305, i64 10
  %307 = load float, float* %306, align 4
  %308 = load float*, float** %5, align 8
  %309 = getelementptr inbounds float, float* %308, i64 11
  %310 = load float, float* %309, align 4
  %311 = fmul float %307, %310
  %312 = fadd float %304, %311
  %313 = load float*, float** %4, align 8
  %314 = getelementptr inbounds float, float* %313, i64 11
  %315 = load float, float* %314, align 4
  %316 = fadd float %312, %315
  %317 = load float*, float** %6, align 8
  %318 = getelementptr inbounds float, float* %317, i64 11
  store float %316, float* %318, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
